🐛 fix: comic-dialog close event.

--- a/front-end/src/app/modules/admin/components/dialogs/comic-dialog/comic-dialog.component.html
+++ b/front-end/src/app/modules/admin/components/dialogs/comic-dialog/comic-dialog.component.html
@@ -77,13 +77,13 @@
 
     <div class="preview-image-action">
       <p>Pre-Visualização:</p>
-      <button
+      <!-- <button
         (click)="loadComicImage(comic.comicID)"
         *ngIf="!!comic?.comicID"
         class="mat-raised-button mat-primary"
       >
         Carregar
-      </button>
+      </button> -->
     </div>
 
     <div class="preview-image">
