💎 style: login and register page.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -11,6 +11,9 @@
         <a class="menu-list__link" routerLink="/sobre">Sobre</a>
       </li>
       <li class="menu-list__item" routerLinkActive="menu-list__item--active">
+        <a class="menu-list__link" routerLink="/authentication">Login</a>
+      </li>
+      <li class="menu-list__item" routerLinkActive="menu-list__item--active">
         <a class="menu-list__link" routerLink="/admin">Admin</a>
       </li>
     </ul>
