--- a/front-end/src/app/modules/authentication/pages/login/login.component.html
+++ b/front-end/src/app/modules/authentication/pages/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Bem vindo Novamente</mat-card-title>
+    <mat-card-subtitle
+      >Para se manter conectado, faça o login com suas informações
+      pessoais</mat-card-subtitle
+    >
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="form">
+      <mat-form-field>
+        <input
+          type="email"
+          matInput
+          placeholder="Email"
+          formControlName="email"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          type="text"
+          matInput
+          placeholder="Senha"
+          formControlName="password"
+        />
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="primary">Login</button>
+    <a class="pull-right" [routerLink]="['/authentication', 'register']"
+      >Não possui uma conta ainda? crie a sua aqui!</a
+    >
+  </mat-card-actions>
+</mat-card>
