--- a/front-end/src/app/modules/authentication/pages/register/register.component.html
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.html
@@ -1,1 +1,42 @@
-<p>register works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Cadastro</mat-card-title>
+    <mat-card-subtitle>faça o seu cadastro com a gente</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="form">
+      <mat-form-field>
+        <input
+          type="email"
+          matInput
+          placeholder="Email"
+          formControlName="email"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          type="text"
+          matInput
+          placeholder="Senha"
+          formControlName="password"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          type="text"
+          matInput
+          placeholder="Confirmação senha"
+          formControlName="passwordCheck"
+        />
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="primary">Cadastrar</button>
+    <a class="pull-right" [routerLink]="['/authentication', 'login']"
+      >Já possui uma conta? faça seu login sua aqui!</a
+    >
+  </mat-card-actions>
+</mat-card>
