🐛 fix: header size.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
         <a class="menu-list__link" routerLink="/"><strong>Comics ++</strong></a>
       </li>
       <li class="menu-list__item" routerLinkActive="menu-list__item--active">
-        <a class="menu-list__link" routerLink="/livros">Livros</a>
+        <a class="menu-list__link" routerLink="/quadrinhos">Quadrinhos</a>
       </li>
       <li class="menu-list__item" routerLinkActive="menu-list__item--active">
         <a class="menu-list__link" routerLink="/sobre">Sobre</a>
