--- a/front-end/src/app/components/header/header.component.scss
+++ b/front-end/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@
 
 :host {
   background: var(--color-primary);
-  height: 50px;
+  height: $header-size;
   position: absolute;
 
   width: 100%;
@@ -13,7 +13,7 @@
 
 .header {
   background-color: $color-primary;
-  height: 50px;
+  height: $header-size;
   @include flex-center;
   justify-content: space-between;
   margin: 0 auto;
