--- a/front-end/src/app/pages/about/about.component.html
+++ b/front-end/src/app/pages/about/about.component.html
@@ -1,12 +1,8 @@
 <section class="about">
   <h1 class="about__title">Sobre</h1>
 
-  <p class="about__text">Meat | Application to show some Angular's Features</p>
-  <p class="about__text">MIT license</p>
   <p class="about__text">
-    Copyright 2017 COD3R (<a class="about__link" href="http://www.cod3r.com.br"
-      >http://www.cod3r.com.br</a
-    >)
+    Comics ++ | Application to show some Angular's Features
   </p>
   <p class="about__text">
     Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -28,11 +24,5 @@
     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
     FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
     IN THE SOFTWARE.
-  </p>
-  <p class="about__text">
-    Imagens usadas na aplicação por
-    <a class="about__link" href="http://www.freepik.com" target="_blank"
-      >freepik.com</a
-    >
   </p>
 </section>
