--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -16,7 +16,7 @@
   main {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: $header-size;
     flex: 1;
     position: relative;
     background-color: $color-background;
