--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -82,6 +82,7 @@ $global-font-size: rem(18);
 $global-line-height: 1.5;
 $global-radius: 10px;
 $global-module-size: rem(30);
+$header-size: rem(60);
 
 // ==========================================================================
 // Others
