📦 refactor: home page.

--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -1,10 +1,13 @@
 <section class="panel">
-  <h1 class="panel__title">Bem vindo ao Comics++</h1>
-  <p class="panel__subtitle">
-    O melhor lugar para você começar ou completar a sua coleção de HQ's do
-    Brasil.
-  </p>
-  <a routerLink="/livros" class="panel__button">
-    <strong>Ver HQ's</strong>
-  </a>
+  <div class="panel__info">
+    <h1 class="panel__title">Comics++</h1>
+    <p class="panel__subtitle">
+      O melhor lugar para você começar ou completar a sua coleção de HQ's do
+      Brasil.
+    </p>
+    <a routerLink="/quadrinhos" class="panel__button">
+      <strong>Ver HQ's</strong>
+    </a>
+  </div>
+  <img src="../../../assets/img/hero-image.png" alt="" />
 </section>
