--- a/front-end/src/app/pages/not-found/not-found.component.html
+++ b/front-end/src/app/pages/not-found/not-found.component.html
@@ -1,8 +1,8 @@
 <div class="not-found">
-  <img src="../../../assets/img/404.png" alt="" class="not-found-image" />
+  <img src="../../../assets/img/404.svg" alt="" class="not-found__image" />
   <h1 class="not-found__title">Página Não Encontrada</h1>
   <p class="not-found__text">
-    Está com fome? Acesse a página de
-    <a [routerLink]="['/restaurants']">restaurantes</a>
+    Está perdido? Acesse a página de
+    <a [routerLink]="['/quadrinhos']">quadrinhos</a>
   </p>
 </div>
