💎 style: background-panel

--- a/front-end/src/app/components/comic/comic.component.html
+++ b/front-end/src/app/components/comic/comic.component.html
@@ -11,7 +11,7 @@
       <i class="fas fa-shopping-cart"></i>
       Adicionar
     </button>
-    <button [routerLink]="['/livros', comic.comicID]" class="comic__btn">
+    <button [routerLink]="['/quadrinhos', comic.comicID]" class="comic__btn">
       <i class="fas fa-search"></i>
       Visualizar
     </button>
