--- a/front-end/src/app/components/comic/comic.component.scss
+++ b/front-end/src/app/components/comic/comic.component.scss
@@ -47,6 +47,7 @@
     position: absolute;
     left: rem(12);
     bottom: rem(20);
+    font-size: rem(20);
 
     @include tiny-mobile {
       font-size: rem(20);
