--- a/front-end/src/app/components/header/header.component.scss
+++ b/front-end/src/app/components/header/header.component.scss
@@ -55,7 +55,7 @@
 
     &__item--active .menu-list__link,
     &__item:hover .menu-list__link {
-      color: rgb(0, 247, 255);
+      color: #00f7ff;
     }
 
     &__link {
