--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -55,7 +55,7 @@ $project-colors: (
 
 $project-colors-theme-dark: (
   "primary": #252a41,
-  "background": hsl(230, 17%, 14%),
+  "background": #1e202a,
   "text": #d3cdcd,
   "title-text": white,
   "link": #6ba8c7,
