--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -80,7 +80,7 @@
           <button
             (click)="loadData(form.value)"
             class="search-button"
-            mat-flat-button
+            mat-stroked-button
             color="primary"
           >
             Pesquisar
@@ -158,7 +158,7 @@
       <td mat-cell *matCellDef="let element; let i = index">
         <button
           class="btn btn-edit"
-          mat-raised-button
+          mat-button
           color="primary"
           (click)="openDialog(element)"
         >
@@ -166,7 +166,7 @@
         </button>
         <button
           class="btn"
-          mat-raised-button
+          mat-button
           color="warn"
           (click)="deleteItem(element)"
         >
