📦 refactor: new folder structure.

--- a/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
+++ b/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
@@ -1,8 +1,7 @@
-@import "../../../../../../sass/functions";
-@import "../../../../../../sass/variables";
-@import "../../../../../../sass/mixins";
-@import "../../../../../../sass/media";
-
+@import "../../../../../sass/functions";
+@import "../../../../../sass/variables";
+@import "../../../../../sass/mixins";
+@import "../../../../../sass/media";
 mat-dialog-actions {
   @include flex-center;
   justify-content: flex-end;
