✨ feat: auth module added.

--- a/front-end/src/app/modules/authentication/pages/login/login.component.html
+++ b/front-end/src/app/modules/authentication/pages/login/login.component.html
@@ -30,7 +30,8 @@
   <mat-card-actions>
     <button mat-raised-button color="primary">Login</button>
     <a class="pull-right" [routerLink]="['/authentication', 'register']"
-      >Não possui uma conta ainda? crie a sua aqui!</a
-    >
+      ><span>Não possui uma conta ainda?</span>
+      <span>crie a sua aqui!</span>
+    </a>
   </mat-card-actions>
 </mat-card>
