--- a/front-end/src/app/modules/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.scss
@@ -30,6 +30,11 @@ button {
 }
 
 a {
+  @include flex-center(column);
   color: $color-link;
   font-size: rem(12);
+
+  span {
+    display: block;
+  }
 }
