💎 style: button color.

--- a/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.html
@@ -108,6 +108,7 @@
         </button>
         <button
           class="btn"
+          color="warn"
           mat-raised-button
           (click)="deleteGenreRelationships(element)"
         >
