✨ feat: comicInventory crud added.

--- a/front-end/src/app/modules/admin/admin.component.html
+++ b/front-end/src/app/modules/admin/admin.component.html
@@ -18,6 +18,10 @@
         <i class="fad fa-tasks icon"></i>
         <span>Categorias</span>
       </a>
+      <a mat-list-item routerLinkActive="active" [routerLink]="['inventory']">
+        <i class="fas fa-inventory icon"></i>
+        <span>Estoque</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
