--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -22,15 +22,15 @@
     background-color: $color-background;
     overflow: auto;
 
-    &::ng-deep router-outlet.main ~ * {
-      position: absolute;
-      width: 100%;
-      max-width: $global-max-width;
-      padding: rem(20 40);
+    // &::ng-deep router-outlet.main ~ * {
+    //   position: absolute;
+    //   width: 100%;
+    //   max-width: $global-max-width;
+    //   padding: rem(20 40);
 
-      @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
-        padding: rem(10);
-      }
-    }
+    //   @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
+    //     padding: rem(10);
+    //   }
+    // }
   }
 }
