--- a/front-end/src/app/modules/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.scss
@@ -14,6 +14,11 @@ mat-card {
   }
 }
 
+mat-card-title,
+mat-card-subtitle {
+  color: $color-text;
+}
+
 form {
   display: flex;
   flex-direction: column;
