--- a/front-end/src/app/modules/admin/pages/inventory-crud/inventory-crud.component.scss
+++ b/front-end/src/app/modules/admin/pages/inventory-crud/inventory-crud.component.scss
@@ -3,6 +3,14 @@
 @import "../../../../../sass/mixins";
 @import "../../../../../sass/media";
 
+:host {
+  margin: 0 !important;
+}
+
+.spinner-container {
+  margin-top: rem(60);
+}
+
 .filter {
   margin-top: rem(10);
   font-size: rem(15);
