--- a/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.html
@@ -3,12 +3,13 @@
     <i class="fa fa-tag" aria-hidden="true"></i>
     Categorias
   </h1>
-  <button (click)="openDialog()" mat-button>
-    <i class="fas fa-plus"></i> Nova Categoria
-  </button>
-</div>
-<mat-divider fxFlex="1 0"></mat-divider>
 
+  <cms-add-button
+    (clickEvent)="openDialog()"
+    [buttonText]="'Nova Categoria'"
+  ></cms-add-button>
+</div>
+<mat-divider></mat-divider>
 <h2 class="filter">
   <i class="fas fa-filter"></i>
   Filtros
@@ -47,12 +48,16 @@
   </form>
 </div>
 
-<div class="title-group">
+<div
+  class="title-group subtitle"
+  [ngStyle]="{
+    display: loadingComplete && paginator.length ? 'table' : 'none'
+  }"
+>
   <h1 class="mat-h1">
     <i class="fa fa-list-alt" aria-hidden="true"></i>
     Lista de Categorias
   </h1>
-  <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
 <div class="container">
@@ -91,29 +96,26 @@
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let element; let i = index">
         <button
-          class="btn btn-edit"
-          mat-raised-button
-          color="primary"
-          (click)="openDialog(element)"
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu"
         >
-          Edit
+          <mat-icon>more_vert</mat-icon>
         </button>
-        <button
-          class="btn"
-          mat-raised-button
-          color="warn"
-          (click)="deleteItem(element)"
-        >
-          Delete
-        </button>
-        <button
-          class="btn"
-          color="warn"
-          mat-raised-button
-          (click)="deleteGenreRelationships(element)"
-        >
-          Remover Vínculos
-        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="openDialog(element)">
+            <mat-icon color="primary">edit</mat-icon>
+            <span>Editar</span>
+          </button>
+          <button mat-menu-item (click)="deleteItem(element)">
+            <mat-icon color="warn">delete</mat-icon>
+            <span>Deletar</span>
+          </button>
+          <button mat-menu-item (click)="deleteGenreRelationships(element)">
+            <mat-icon color="warn">settings_input_component</mat-icon>
+            <span> Remover Vínculos</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
 
