--- a/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.scss
+++ b/front-end/src/app/modules/admin/pages/genre-crud/genre-crud.component.scss
@@ -3,6 +3,18 @@
 @import "../../../../../sass/mixins";
 @import "../../../../../sass/media";
 
+:host {
+  margin: 0 !important;
+}
+
+.spinner-container {
+  margin-top: rem(60);
+}
+
+.title-group.subtitle {
+  margin-top: rem(20);
+}
+
 .filter {
   margin-top: rem(10);
   font-size: rem(15);
@@ -13,6 +25,10 @@
   display: flex;
   align-items: center;
 
+  @include medias($tiny-mobile, $mobile) {
+    flex-direction: column;
+  }
+
   .mat-form-field-wrapper {
     padding: 0;
   }
@@ -22,10 +38,21 @@
     height: rem(29);
     margin-bottom: rem(6);
   }
+
+  .full-wrapper,
+  .full-wrapper button {
+    @include medias($tiny-mobile, $mobile) {
+      width: 100%;
+    }
+  }
 }
 
 mat-form-field {
   margin-right: rem(20);
+
+  @include medias($tiny-mobile, $mobile) {
+    width: 100%;
+  }
 }
 
 table {
